# immediate_closure

./: Cargo.toml  README.md
src/: lib.rs
